# libhandy

./: .gitlab-ci.yml  AUTHORS  HACKING.md  NEWS  README.md  doc.sh  index.html  libhandy.doap  libhandy.syms  libhandy_0.0.1.orig.tar.gz.delta  libhandy_0.0.1.orig.tar.gz.id  libhandy_0.0.2.orig.tar.gz.delta  libhandy_0.0.2.orig.tar.gz.id  libhandy_0.0.3.orig.tar.gz.delta  libhandy_0.0.3.orig.tar.gz.id  libhandy_0.0.4.orig.tar.gz.delta  libhandy_0.0.4.orig.tar.gz.id  libhandy_0.0.5.orig.tar.gz.delta  libhandy_0.0.5.orig.tar.gz.id  meson.build  meson_options.txt
.gitlab-ci/: check-abi  flatpak-build.sh
data/: meson.build
data/glade/: glade-hdy-header-group.c  libhandy.xml  meson.build
debian/: changelog  control  gbp.conf  gir1.2-handy-1.install  gitlab-ci.yml  libhandy-0.0-0.symbols  libhandy-0.0-dev.install  libhandy-0.1-0.install  libhandy-0.1-0.symbols  libhandy-1-0.symbols  libhandy-1-dev.install  rules
doc/: build-howto.xml  handy-docs.xml  hdy-migrating-0-0-to-1.xml  index.html  libhandy.toml.in  meson.build  visual-index.xml
examples/: example-window.c  example-window.ui  example.c  example.gresources.xml  example.py  handy-demo.c  handy-demo.gresources.xml  hdy-demo-preferences-window.c  hdy-demo-window.c  hdy-demo-window.ui  hdy-dialog-complex-example.ui  hdy-tab-view-demo-window.c  hdy-view-switcher-demo-window.c  hdy-view-switcher-demo-window.ui  meson.build  sm.puri.Handy.Demo.json  sm.puri.Handy.Example.json  style.css  switcher-window.ui
glade/: appdata.patch  glade-catalog.dtd  glade-hdy-carousel.h  glade-hdy-drawer.c  glade-hdy-drawer.h  (+15 more)
(+265 files in other folders)
